# SmolLMRustInferenceEngine

./: .gitignore  README.md
pyInference/: baseInference.py  server.py
pyInference/inferenceNode/: Dockerfile  docker-compose.yml  requirements.txt  server.py  smollm_pb2.py  smollm_pb2.pyi  smollm_pb2_grpc.py
pyInference/protos/: smollm.proto
rustClient/: Cargo.toml  build.rs
rustClient/src/: client.rs  jobs.txt  main.rs
streamedRPC/: Cargo.toml  build.rs
streamedRPC/proto/: computations.proto
streamedRPC/src/: client.rs  server.rs
