[package]
name = "rustClient"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "LMClient"
path = "src/client.rs"
[[bin]]
name="main"
path="src/main.rs"

[dependencies]
tonic = "0.7"
prost = "0.10"
async-stream = "0.3"
futures="0.3"
tokio-stream="0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }
chrono="0.4"
colored="2.0"
[build-dependencies]
tonic-build = "0.7"